# Mysis

./: Cargo.toml  README.md  README.zh-CN.md  mysis-bridge.toml
.claude/: CLAUDE.md
mysis-bridge/: Cargo.toml
mysis-bridge/src/: config.rs  device_manager.rs  embedder.rs  forwarder.rs  main.rs  memory_handler.rs  memory_store.rs  scheduler.rs  time_service.rs
mysis-core/: Cargo.toml
mysis-core/src/: agent.rs  error.rs  lib.rs  memory.rs  protocol.rs  tool.rs
mysis-esp32/: Cargo.toml  build.rs  build.sh  sdkconfig.defaults  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32s3
mysis-esp32/.cargo/: config.toml  config_esp32c3.toml  config_esp32c6.toml
mysis-esp32/src/: chip.rs  main.rs  memory_nvs.rs  mqtt_transport.rs
mysis-esp32/src/tools/: dht.rs  gpio.rs  memory.rs  mod.rs
scripts/: download_model.sh
