[package]
name = "mysis-bridge"
version.workspace = true
edition.workspace = true

[dependencies]
mysis-core = { path = "../mysis-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
rumqttc = "0.24"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
