[package]
name = "mysis-esp32"
version = "0.1.0"
edition = "2021"

[dependencies]
mysis-core = { path = "../mysis-core" }
esp-idf-hal = "0.44"
esp-idf-svc = { version = "0.50", features = ["alloc"] }
esp-idf-sys = { version = "0.35", features = ["binstart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[build-dependencies]
embuild = "0.32"
